# pbi-doc-generator

./: .gitignore  CONTRIBUTING.md  LICENSE  PBI Documentatie Generator.bat  PBI_Doc_Generator_v0.6.spec  README.md  ROADMAP.md  dax_parser.py  excel_extractor.py  extract.py  gui.py  html_template.py  installer.iss  pbip_adapter.py  pyproject.toml  sample_output.html  tmdl_parser.py
docs/: sample_output.html
